syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";  // 指定Java包名
option java_outer_classname = "ChatProto";  // 指定外层类名

// 城镇聊天请求
message TownChatRequest {
  int32 type = 1;         // 聊天类型
  string chat = 2;         // 聊天内容
  string voice = 3;        // 语音消息
  string voicetime = 4;    // 语音时长
  string name = 5;         // 发送者名称
  uint64 guid = 6;         // 发送者GUID
  int32 job = 7;           // 职业
  int32 level = 8;         // 等级
  int32 channel = 9;       // 频道
}

// 城镇聊天响应
message TownChatResponse {
  int32 error = 1;        // 错误码
  bool success = 2;        // 是否成功
}

// 快速聊天请求
message QuickChattingRequest {
  int32 type = 1;         // 聊天类型
}

// 快速聊天响应
message QuickChattingResponse {
  int32 error = 1;        // 错误码
  bool success = 2;        // 是否成功
}

// 公会聊天信息
message GuildChat {
  uint64 guid = 1;       // 发送者GUID
  string name = 2;        // 发送者名称
  string content = 3;      // 聊天内容
  int32 type = 4;         // 聊天类型
  int64 timestamp = 5;    // 时间戳
  int32 job = 6;           // 职业
  int32 level = 7;         // 等级
}

// 加载公会聊天请求
message LoadGuildChatRequest {
  int32 sequence = 1;      // 序列号
}

// 加载公会聊天响应
message LoadGuildChatResponse {
  int32 error = 1;              // 错误码
  repeated GuildChat chats = 2;   // 聊天列表
  int32 total_count = 3;         // 总数量
}

// 隐藏聊天信息
message HiddenChatting {
  uint64 guid = 1;       // GUID
  string name = 2;        // 名称
  int32 type = 3;         // 类型
}

// 加载隐藏聊天请求
message HiddenChattingLoadRequest {
}

// 加载隐藏聊天响应
message HiddenChattingLoadResponse {
  int32 error = 1;                      // 错误码
  repeated HiddenChatting chattings = 2;   // 隐藏聊天列表
  int32 total_count = 3;                 // 总数量
}

// 添加隐藏聊天请求
message HiddenChattingAddRequest {
  repeated HiddenChatting chattings = 1;  // 隐藏聊天列表
}

// 添加隐藏聊天响应
message HiddenChattingAddResponse {
  int32 error = 1;        // 错误码
  bool success = 2;        // 是否成功
}

// 删除隐藏聊天请求
message HiddenChattingDeleteRequest {
  repeated HiddenChatting chattings = 1;  // 隐藏聊天列表
}

// 删除隐藏聊天响应
message HiddenChattingDeleteResponse {
  int32 error = 1;        // 错误码
  bool success = 2;        // 是否成功
}

// 聊天频道信息
message ChatChannel {
  int32 channel_id = 1;   // 频道ID
  string name = 2;         // 频道名称
  int32 type = 3;         // 频道类型
  int32 max_users = 4;    // 最大用户数
  int32 current_users = 5; // 当前用户数
}

// 聊天频道列表请求
message ChatChannelListRequest {
}

// 聊天频道列表响应
message ChatChannelListResponse {
  int32 error = 1;                 // 错误码
  repeated ChatChannel channels = 2;   // 频道列表
  int32 total_count = 3;            // 总数量
}

// 聊天框架标签列表请求
message ChatFrameTabListRequest {
}

// 聊天框架标签列表响应
message ChatFrameTabListResponse {
  int32 error = 1;        // 错误码
  repeated string tabs = 2;  // 标签列表
}
